kubernetes/stupidchess-mongo-deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: stupidchess-mongo-deployment
  namespace: stupidchess
spec:
  template:
    metadata:
      labels:
        role: mongo
    spec:
      containers:
        - name: mongo
          image: dhermanns/rpi-mongo:2.6.4
          ports:
            - name: mongo
              containerPort: 27017
