kubernetes/stupidchess-mongo-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mongo
  namespace: stupidchess
spec:
  selector:
    role: mongo
  ports:
    - name: mongo
      port: 27017
      targetPort: mongo
